--- a/index.html
+++ b/index.html
@@ -61,21 +61,12 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
+				<div id="fh5co-logo"><a href="index.html">Juliana Iasi</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
 					<li><a href="work.html">Work</a></li>
 					<li><a href="about.html">Profile</a></li>
-					<li class="has-dropdown">
-						<a href="#">Dropdown</a>
-						<ul class="dropdown">
-							<li><a href="#">Web Design</a></li>
-							<li><a href="#">eCommerce</a></li>
-							<li><a href="#">Branding</a></li>
-							<li><a href="#">API</a></li>
-						</ul>
-					</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -93,7 +84,7 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-7 col-md-push-5 text-left intro">
-					<h2>Shift is a free html5 template to showcase your work. <span class="fh5co-highlight">Made with <i class="icon-heart2"></i> by <a href="http://freehtml5.co">FreeHTML5.co</a> </span></h2>
+					<h2>Illustrator and character designer</h2>
 					<!-- <h2>Shift is a Collection of a Beautiful &amp; Premium Themes.</h2> -->
 				</div>
 				
