wip: portfolio base

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shift &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Juliana Iasi | Illustrator</title>
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
+	<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
 	<meta name="author" content="FreeHTML5.co" />
 
 	<!-- 
@@ -24,15 +25,16 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+	<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
+	<meta property="og:url" content="https://juiasi.github.io/"/>
+	<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
+	<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
+	<meta property="fb:admins" content="juiasi"/>
+	<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+	<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
+	<meta name="twitter:url" content="https://juiasi.github.io/" />
+	<meta name="twitter:card" content="summary" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
 	
@@ -65,16 +67,15 @@
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
-					<li><a href="work.html">Work</a></li>
-					<li><a href="about.html">Profile</a></li>
+					<li><a href="index.html">Work</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="fh5co-top-social menu-1 text-right">
 				<ul class="fh5co-social">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
+					<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -82,25 +83,17 @@
 	
 	<div id="fh5co-work">
 		<div class="container">
-			<div class="row top-line animate-box">
-				<div class="col-md-7 col-md-push-5 text-left intro">
-					<h2>Illustrator and character designer</h2>
-					<!-- <h2>Shift is a Collection of a Beautiful &amp; Premium Themes.</h2> -->
-				</div>
-				
-			</div>
 			<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-1.jpg);">
-							<div class="inner">
+				<div class="col-md-12 text-center">
+					<div class="work">
+						<div class="work-grid" style="background-image:url(images/main-banner.png);">
+							<div class="main-banner">
 								<div class="desc">
-								<h3>Folding Light</h3>
-								<span class="cat">Branding</span>
-							</div>
+									<h1>Wellcome! I'm a illustrator and character designer</h1>
+								</div>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
@@ -212,18 +205,17 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="author">
-						<div class="author-inner animate-box" style="background-image: url(images/person3.jpg);">
+						<div class="author-inner animate-box" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
 						<div class="desc animate-box">
-							<span>Web Designer &amp; Developer</span>
-							<h3>Mike Airways</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="about.html" class="btn btn-primary btn-outline">Learn More</a></p>
+							<span>Illustrator & Character Designer</span>
+							<h3>Juliana Iasi</h3>
+							<p>Hello, I'm a freelance illustrator based in the state of São Paulo, Brazil. I</p>
+							<p><a href="contact.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#"><i class="icon-github"></i></a></li>
+								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
+								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
+								<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
 							</ul>
 						</div>
 					</div>
