--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -1,95 +1,85 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shift &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Juliana Iasi | Illustrator</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
+		<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
+		<meta name="author" content="FreeHTML5.co" />
 	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-	</head>
-	<body>
-		
-	<div class="fh5co-loader"></div>
+		<!-- 
+		//////////////////////////////////////////////////////
 	
-	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container">
-			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
+		FREE HTML5 TEMPLATE 
+		DESIGNED & DEVELOPED by FreeHTML5.co
+			
+		Website: 		http://freehtml5.co/
+		Email: 			info@freehtml5.co
+		Twitter: 		http://twitter.com/fh5co
+		Facebook: 		https://www.facebook.com/fh5co
+	
+		//////////////////////////////////////////////////////
+		 -->
+	
+		  <!-- Facebook and Twitter integration -->
+		<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+		<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
+		<meta property="og:url" content="https://juiasi.github.io/"/>
+		<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
+		<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
+		<meta property="fb:admins" content="juiasi"/>
+		<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+		<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
+		<meta name="twitter:url" content="https://juiasi.github.io/" />
+		<meta name="twitter:card" content="summary" />
+	
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
+		
+		<!-- Animate.css -->
+		<link rel="stylesheet" href="css/animate.css">
+		<!-- Icomoon Icon Fonts-->
+		<link rel="stylesheet" href="css/icomoon.css">
+		<!-- Bootstrap  -->
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<!-- Theme style  -->
+		<link rel="stylesheet" href="css/style.css">
+	
+		<!-- Modernizr JS -->
+		<script src="js/modernizr-2.6.2.min.js"></script>
+		<!-- FOR IE9 below -->
+		<!--[if lt IE 9]>
+		<script src="js/respond.min.js"></script>
+		<![endif]-->
+	
+		</head>
+		<body>
+			
+		<div class="fh5co-loader"></div>
+		
+		<div id="page">
+		<nav class="fh5co-nav" role="navigation">
+			<div class="container">
+				<div class="fh5co-top-logo">
+					<div id="fh5co-logo"><a href="index.html">Juliana Iasi</a></div>
+				</div>
+				<div class="fh5co-top-menu menu-1 text-center">
+					<ul>
+						<li><a href="index.html">Work</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
+				<div class="fh5co-top-social menu-1 text-right">
+					<ul class="fh5co-social">
+						<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
+						<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="fh5co-top-menu menu-1 text-center">
-				<ul>
-					<li><a href="work.html">Work</a></li>
-					<li><a href="about.html">Profile</a></li>
-					<li class="has-dropdown">
-						<a href="#">Dropdown</a>
-						<ul class="dropdown">
-							<li><a href="#">Web Design</a></li>
-							<li><a href="#">eCommerce</a></li>
-							<li><a href="#">Branding</a></li>
-							<li><a href="#">API</a></li>
-						</ul>
-					</li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="fh5co-top-social menu-1 text-right">
-				<ul class="fh5co-social">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+		</nav>
 	
 	<div id="fh5co-author">
 		<div class="container">
