--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,8 @@
 					<ul class="fh5co-social">
 						<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
-						<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
+						<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
+						<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -83,46 +84,47 @@
 	
 	<div id="fh5co-contact">
 		<div class="container">
-			<div class="row top-line animate-box">
+			<div class="row top-line">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>Contact</h2>
 				</div>
 			</div>
 			<div class="row top-line">
-				<div class="col-md-8 col-md-offset-2">
+				<div class="col-md-10 col-md-offset-1">
 					<div class="author">
-						<div class="author-inner animate-box" style="background-image: url(images/julianaiasi-portrait.png);">
+						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
-						<div class="desc animate-box">
+						<div class="desc">
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, with 3 years experience working between illustration, animation and games.</p>
+							<p>I worked for a year as an artist of mobile game assets and then illustrated some books, card games, presentations, advertising and 2D animation for social media.</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
-								<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
+								<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
+								<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="col-md-5 col-md-pull-1 animate-box">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="col-md-5">
 						<div class="fh5co-contact-info">
 							<h3>Contact Information</h3>
 							<ul>
-								<li class="address">198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-								<li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li>
-								<li class="email"><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-								<li class="url"><a href="http://freehtml5.co">FreeHTML5.co</a></li>
+								<li class="address">São Paulo - SP, Brazil</li>
+								<!-- <li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li> -->
+								<li class="email"><a href="mailto:juiasi.art@gmail.com">juiasi.art@gmail.com</a></li>
+								<li class="url"><a href="https://juiasi.github.io">juiasi.github.io</a></li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-7 animate-box">
+					<div class="col-md-7">
 						<h3>Get In Touch</h3>
-						<form action="#">
+						<form action="mailto:juiasi.art@gmail.com">
 							<div class="row form-group">
 								<div class="col-md-12">
 									<label for="fname">Your Name</label>
@@ -155,32 +157,20 @@
 		</div>
 	</div>
 
-	<div id="fh5co-started">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Get Started</h2>
-					<p>We create beautiful themes for your site behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					<p><a href="#" class="btn btn-primary">Let's work together</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> &amp; <a href="http://blog.gessato.com/" target="_blank">Gessato</a></small>
+						<small class="block">&copy; Juliana Iasi. All Rights Reserved.</small> 
+						<small class="block">Template designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></small>
 					</p>
 					
 					<ul class="fh5co-social-icons">
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble"></i></a></li>
+						<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
+						<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
+						<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
 					</ul>
 					
 				</div>
