--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -149,15 +149,15 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> &amp; <a href="http://blog.gessato.com/" target="_blank">Gessato</a></small>
+						<small class="block">&copy; Juliana Iasi. All Rights Reserved.</small> 
+						<small class="block">Template designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></small>
 					</p>
 					
 					<ul class="fh5co-social-icons">
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble"></i></a></li>
+						<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
+						<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
+						<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
 					</ul>
 					
 				</div>
