--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Get Started</h2>
-					<p>We create beautiful themes for your site behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					<p><a href="#" class="btn btn-primary">Let's work together</a></p>
+					<p>I can create beautiful illustrations, concept art and simple animation to solve your problem.</p>
+					<p><a href="contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
 		</div>
