feat: first project

--- a/projects/2023-02-06-eyes-book.html
+++ b/projects/2023-02-06-eyes-book.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Juliana Iasi | Illustrator</title>
-		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
 		<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
@@ -39,16 +39,16 @@
 		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
 		
 		<!-- Animate.css -->
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="../css/animate.css">
 		<!-- Icomoon Icon Fonts-->
-		<link rel="stylesheet" href="css/icomoon.css">
+		<link rel="stylesheet" href="../css/icomoon.css">
 		<!-- Bootstrap  -->
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="../css/bootstrap.css">
 		<!-- Theme style  -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="../css/style.css">
 	
 		<!-- Modernizr JS -->
-		<script src="js/modernizr-2.6.2.min.js"></script>
+		<script src="../js/modernizr-2.6.2.min.js"></script>
 		<!-- FOR IE9 below -->
 		<!--[if lt IE 9]>
 		<script src="js/respond.min.js"></script>
@@ -63,12 +63,12 @@
 		<nav class="fh5co-nav" role="navigation">
 			<div class="container">
 				<div class="fh5co-top-logo">
-					<div id="fh5co-logo"><a href="index.html">Juliana Iasi</a></div>
+					<div id="fh5co-logo"><a href="../index.html">Juliana Iasi</a></div>
 				</div>
 				<div class="fh5co-top-menu menu-1 text-center">
 					<ul>
-						<li><a href="index.html">Work</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="../index.html">Work</a></li>
+						<li><a href="../contact.html">Contact</a></li>
 					</ul>
 				</div>
 				<div class="fh5co-top-social menu-1 text-right">
@@ -84,48 +84,51 @@
 	<div id="fh5co-author">
 		<div class="container">
 			<div class="row top-line animate-box">
-				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
-					<h2>The Aloha Shirt</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
+					<h2>The eyes that didn't want to sleep</h2>
+					<p>Remake of the illustrations for "The eyes that didn't want to sleep" book, written by Maria Antônia Ramos Coutinho and originally illustrated by Igor Balbachevsky.</p>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Front-end Design</li>
-							<li>Branding</li>
-							<li>Information Architecture</li>
-							<li>Data Gathering</li>
+							<li>Book Illustration</li>
+							<li>Character design</li>
 						</ul>
 					</div>
 
-					<p><a href="#" class="btn btn-primary">Visit Website</a></p>
+					<p><a target="_blank" href="https://www.behance.net/gallery/163167049/Capa-de-livro-infantil" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p class="animate-box"><img src="images/project-7.jpg" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="images/project-6.jpg" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-
-					<div class="testimony animate-box">
-						<blockquote>
-							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove&rdquo;</p>
-							<p class="person"><cite>&mdash; Job Smith</cite> CEO and Founder</p>
-						</blockquote>
-					</div>
-					<p class="animate-box"><img src="images/project-5.jpg" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="images/project-3.jpg" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<h3>Original book cover</h3>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background"></p>
+					<h3>My version of the book cover</h3>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
+					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
 				
+					<!-- <div class="testimony animate-box">
+						<blockquote>
+							<p>xxxx</p>
+							<p class="person"><cite>&mdash; xxxx</cite> xxxx</p>
+						</blockquote>
+					</div> -->
 
 					<div class="row row-pt-md portfolio-navigation">
-						<div class="col-xs-4 text-left">
+						<!-- <div class="col-xs-4 text-left">
 							<a href="#" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
+						</div> -->
+						<div class="text-center">
+							<a href="index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
 						</div>
-						<div class="col-xs-4 text-center">
-							<a href="#" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
-						</div>
-						<div class="col-xs-4 text-right">
+						<!-- <div class="col-xs-4 text-right">
 							<a href="#" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -137,8 +140,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Get Started</h2>
-					<p>We create beautiful themes for your site behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					<p><a href="#" class="btn btn-primary">Let's work together</a></p>
+					<p>I can create beautiful illustrations, concept art and simple animation to solve your problem.</p>
+					<p><a href="contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
 		</div>
@@ -172,15 +175,15 @@
 	</div>
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="../js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="../js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="../js/jquery.waypoints.min.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 
 	</body>
 </html>
