--- a/index.html
+++ b/index.html
@@ -96,102 +96,20 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-2.jpg);">
+					<a class="work" href="projects/2023-02-06-eyes-book.html">
+						<div class="work-grid" style="background-image:url(images/thumbs/eyes.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Power Led Light</h3>
-									<span class="cat">Illustration</span>
+									<h3>The eyes that didn't want to sleep</h3>
+									<span class="cat">Book Illustration</span>
 								</div>
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-3.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Elephant Origami</h3>
-									<span class="cat">Logo</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-4.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Electric Kick Scooter</h3>
-									<span class="cat">Web Design</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-5.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Shark Diver</h3>
-									<span class="cat">Branding</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-6.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Objekte Unserer Tage Berlin</h3>
-									<span class="cat">Logo</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-7.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Aloha Shirt</h3>
-									<span class="cat">Web Design</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-8.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Olafur Elliasson Waterfall Versailles</h3>
-									<span class="cat">Branding</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-9.jpg);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Hand Care</h3>
-									<span class="cat">Logo</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
+
 			</div>
 		</div>
 	</div>
