finished first project

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
 							<p>I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, with 3 years experience working between illustration, animation and games.</p>
-							<p>I worked for a year as an artist of mobile game assets and then illustrated some books, card games, presentations, advertising and 2D animation for social media.</p>
+							<p>I worked for a year as an artist of mobile game assets and then illustrated some books, card games, presentations, advertising  and short 2D animations for social media.</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
