--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Get Started</h2>
-					<p>I can create beautiful illustrations, concept art and simple animation to solve your problem.</p>
+					<p>I create beautiful illustrations, concept arts and short 2D animations.</p>
 					<p><a href="contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
