--- a/projects/2023-02-06-eyes-book.html
+++ b/projects/2023-02-06-eyes-book.html
@@ -82,8 +82,8 @@
 		</nav>
 	
 	<div id="fh5co-author">
-		<div class="container">
-			<div class="row top-line animate-box">
+		<div id="project-content" class="container animate-box">
+			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
 					<h2>The eyes that didn't want to sleep</h2>
 					<p>Remake of the illustrations for "The eyes that didn't want to sleep" book, written by Maria Antônia Ramos Coutinho and originally illustrated by Igor Balbachevsky.</p>
@@ -100,36 +100,65 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-4 col-md-offset-2">
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background">
+						<figcaption>Original book cover</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-4">
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
+						<figcaption>Sketch of my version of the cover</figcaption>
+					</figure>
+				</div>
 				<div class="col-md-8 col-md-offset-2">
-					<h3>Original book cover</h3>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background"></p>
-					<h3>My version of the book cover</h3>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-					<p class="animate-box"><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="My version of the book cover, with a red-haired child and boats on the curtain above in a bedroom with blue wall and pink bed"></p>
-				
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="Sketch of my version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
+						<figcaption>Final result of the cover</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-4 col-md-offset-2">
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="Character design of the red-haired child wearing blue pijamas, in many poses: in doubt, happy and running scaried">
+						<figcaption>Character design of the child</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-4">
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="Character design of the red-haired mother, wearing a aqua green shirt, salmon color pants and white sneakers., in many poses: explaining, confused and imagining.">
+						<figcaption>Character design of the Mother</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-8 col-md-offset-2">
+					<figure>
+						<img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="Application of the illustration on a double page of the book. It represents the mother sitting on the bed where her son is, inventing a story based on the boats that appear on the curtain. The transition between what is being imagined and what is real is done through clouds that permeate the illustration. The mother is happily pulling back the curtain and the child has a surprised face.">
+						<figcaption>Internal illustration</figcaption>
+					</figure>
+					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="Zoom showing the character details of the illustration above."></p>
+					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="Zoom showing the boats details of the illustration above."></p>
+				</div>
 					<!-- <div class="testimony animate-box">
 						<blockquote>
 							<p>xxxx</p>
 							<p class="person"><cite>&mdash; xxxx</cite> xxxx</p>
 						</blockquote>
 					</div> -->
-
-					<div class="row row-pt-md portfolio-navigation">
-						<!-- <div class="col-xs-4 text-left">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="text-center">
+						<a href="index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
+					</div>
+					<!-- <div class="row row-pt-md portfolio-navigation">
+						<div class="col-xs-4 text-left">
 							<a href="#" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
-						</div> -->
+						</div>
 						<div class="text-center">
 							<a href="index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
 						</div>
-						<!-- <div class="col-xs-4 text-right">
+						<div class="col-xs-4 text-right">
 							<a href="#" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
-						</div> -->
-					</div>
+						</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -140,7 +169,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Get Started</h2>
-					<p>I can create beautiful illustrations, concept art and simple animation to solve your problem.</p>
+					<p>I create beautiful illustrations, concept arts and short 2D animations.</p>
 					<p><a href="contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
